# langton-ant

./: .gitignore  README.md  langton.py  pyproject.toml
rules/: llrr.json  lrrrrrllr.json  origin.json  rlr.json
